--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
             footer
         </footer>
     </div>
-<script src="./assets/app.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
